2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (UpdateInterest): When dropping interest in
	  TCL_READABLE now dropping interest in TCL_EXCEPTION too. This
	  fixes a bug where Expect detects eof on a file prematurely on
	  solaris 2.6 and higher. A much more complete explanation is in
	  the code itself (40 lines of comments for a one-line change :)

2003-04-10  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/binary.n: Fixed typo in [binary format w] desc. [Bug 718543]

2003-04-08  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdAH.c (Tcl_ErrorObjCmd): Strings are only empty if
	they have zero length, not if their first byte is zero, so fix
	test guarding Tcl_AddObjErrorInfo to take this into account.  [Bug
	reported by Don Porter; no bug-id.]

2003-04-07  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclCompCmds.c (TclCompileIfCmd):  Corrected string limits of
        arguments interpolated in error messages. [Bug 711371]

	* generic/tclCmdMZ.c (TraceExecutionProc):  Added missing
	Tcl_DiscardResult() call to avoid memory leak.

2003-04-07  Donal K. Fellows  <zzcgudf@ernie.mvc.mcc.ac.uk>

	* generic/tclObj.c (tclWideIntType, TclInitObjSubsystem):
	(SetBooleanFromAny): Make sure that tclWideIntType is defined and
	somewhat sensible everywhere.  [Bug 713562]

2003-04-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Set stub lib flag based
	on new LIBFLAGSUFFIX variable.
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Set new
	LIBFLAGSUFFIX that works like LIBSUFFIX,
	it is used when creating library names.
	The previous implementation would generate
	-ltclstub85 instead of -ltclstub85s when
	configured with --disable-shared.

2003-04-01  Don Porter  <dgp@users.sourceforge.net>

        * tests/README:  Direct [source] of *.test files is no longer
        recommended.  The tests/*.test files should only be evaluated under